<resources>
    <string name="app_name">Electrical Busbars</string>
    <string name="chose_or_input_params_of_busbars">Chose or input params of busbars:</string>
    <string name="def_density">Default density</string>

    <string name="select_material_label">Choose or input name of material:</string>
    <string name="select_density_label">Enter or put default density of busbars:</string>
    <string name="select_quantity_label">Select the quantity of busbars:</string>
    <string name="select_length_label">Select length of busbars:</string>
    <string name="select_width_label">Select width of busbars:</string>
    <string name="select_thickness_label">Select thickness of busbars:</string>
    <string name="save_and_calculate">Save and Calculate</string>

    <integer name="min_value">1</integer>
    <integer name="step_size">1</integer>
    <integer name="quantity_max_value">10</integer>
    <integer name="length_max_value">1000</integer>
    <integer name="width_max_value">150</integer>
    <integer name="thickness_max_value">20</integer>
    <integer name="density_max_value">22610</integer>


    <integer name="default_quantity">3</integer>
    <integer name="default_length">100</integer>
    <integer name="default_width">50</integer>
    <integer name="default_thickness">10</integer>


    <integer name="copper_density">8970</integer>
    <integer name="aluminium_density">2710</integer>

    <string name="copper_material">copper</string>
    <string name="aluminium_material">aluminium</string>
    <string name="material">material</string>


    <string name="density">density</string>
    <string name="quantity">quantity</string>
    <string name="length">length</string>
    <string name="width">width</string>
    <string name="thickness">thickness</string>



</resources>