<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_label_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chose_or_input_params_of_busbars"
            android:textColor="@color/black"
            android:textSize="@dimen/label_fontSize" />

        <LinearLayout
            android:id="@+id/ll_material"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <AutoCompleteTextView
                android:id="@+id/auto_tv_chosen_material"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:completionThreshold="0"
                android:hint="@string/material"
                android:inputType="textAutoCorrect"
                android:textColorHint="@color/purple_200" />

            <CheckBox
                android:id="@+id/check_density"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/def_density"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/label_fontSize" />

            <EditText
                android:id="@+id/ed_density"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:gravity="end"
                android:inputType="number"
                android:textColorHint="@color/purple_200" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/select_quantity_label"
                android:textSize="@dimen/label_fontSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="@integer/step_size"
                    android:valueFrom="@integer/min_value"
                    android:valueTo="@integer/quantity_max_value" />

                <EditText
                    android:id="@+id/ed_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:inputType="number"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/purple_200" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/select_length_label"
                android:textSize="@dimen/label_fontSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="@integer/step_size"
                    android:valueFrom="@integer/min_value"
                    android:valueTo="@integer/length_max_value" />

                <EditText
                    android:id="@+id/ed_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:inputType="number"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/purple_200" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/select_width_label"
                android:textSize="@dimen/label_fontSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="@integer/step_size"
                    android:valueFrom="@integer/min_value"
                    android:valueTo="@integer/width_max_value" />

                <EditText
                    android:id="@+id/ed_width"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:inputType="number"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/purple_200" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_thickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_thickness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/select_thickness_label"
                android:textSize="@dimen/label_fontSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_thickness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="@integer/step_size"
                    android:valueFrom="@integer/min_value"
                    android:valueTo="@integer/thickness_max_value" />

                <EditText
                    android:id="@+id/ed_thickness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:inputType="number"
                    android:textColor="@color/purple_700"
                    android:textColorHint="@color/purple_200" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_save_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/save_and_calculate" />

    </LinearLayout>

</ScrollView>